--- a/buzzquiz.css
+++ b/buzzquiz.css
@@ -100,15 +100,24 @@ section > div > ion-icon{
 }
 
 .cards {
-    background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 65%, #000000 100%), url(img/1295304.jpg);
-    background-size: contain;
     width: 340px;
     height: 180px;
     margin: 15px 5px 0 5px;
     border-radius: 5px;
     position: relative;
 }
-
+.cards::after{
+    content:'';
+    position:absolute;
+    left:0; top:0;
+    width:100%; height:100%;
+    display:inline-block;
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,.5) 65%, #000000 100%);
+}
+img{
+    height: 100%;
+    width: 100%;
+}
 .cards>span {
     color: white;
     font-size: 19px;
@@ -118,6 +127,7 @@ section > div > ion-icon{
     bottom: 8px;
     left: 20px;
     margin: auto;
+    z-index: 1;
 }
 
 
