tratamento de resposta

--- a/buzzquiz.css
+++ b/buzzquiz.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -79,44 +80,27 @@ main>section {
     border-radius: 50px;
 }
 
-main>section>div>span {
+main>section>span {
     font-size: 20px;
     font-weight: 700;
 }
-section > div:first-of-type{
-    display: flex;
-    justify-content: space-between;
-}
-section > div > ion-icon{
-    color: #EC362D;
-    font-size: 30px;
-}
 
-.container-cards {
+main>section>div {
     display: flex;
-    justify-content: center;
+
     flex-wrap: wrap;
 }
 
 .cards {
+    background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 65%, #000000 100%), url(img/1295304.jpg);
+    background-size: contain;
     width: 340px;
     height: 180px;
     margin: 15px 5px 0 5px;
     border-radius: 5px;
     position: relative;
 }
-.cards::after{
-    content:'';
-    position:absolute;
-    left:0; top:0;
-    width:100%; height:100%;
-    display:inline-block;
-    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,.5) 65%, #000000 100%);
-}
-img{
-    height: 100%;
-    width: 100%;
-}
+
 .cards>span {
     color: white;
     font-size: 19px;
@@ -126,7 +110,6 @@ img{
     bottom: 8px;
     left: 20px;
     margin: auto;
-    z-index: 1;
 }
 
 
@@ -296,18 +279,19 @@ ion-icon {
     align-items: center;
     width: 100%;
     height: 227px;
-    background-image: url('https://www.themarysue.com/wp-content/uploads/2018/11/harry-potter-hogwarts.jpg?resize=1200%2C729');
-    background: linear-gradient(0 deg, rgba(0, 0, 0, 0.6)), rgba(0, 0, 0, 0.6);
+    background-image: url('https://www.themarysue.com/wp-content/uploads/2018/11/harry-potter-hogwarts.jpg?resize=1200%2C729'), linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 65%, #000000 100%);
+    
 
 }
 
 .titulo-quiz {
+    margin-top: 100px;
     font-weight: 400;
     font-size: 39px;
     color: #ffffff;
 }
 
-.pergunta {
+.pergunta, .resultado {
     width: 800px;
     height: 676px;
     display: flex;
