--- a/buzzquiz.css
+++ b/buzzquiz.css
@@ -311,18 +311,21 @@ ion-icon {
     align-items: center;
     width: 100%;
     height: 227px;
-    background-image: url('https://www.themarysue.com/wp-content/uploads/2018/11/harry-potter-hogwarts.jpg?resize=1200%2C729'), linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 65%, #000000 100%);
-
-
+    position: relative;
 }
-
+.banner img{
+    width: 100%;
+    height: 100%;
+    filter: brightness(60%);
+}
 .titulo-quiz {
     margin-top: 100px;
     font-weight: 400;
     font-size: 39px;
     color: #ffffff;
+    position: absolute;
+    top: 0;
 }
-
 .pergunta,
 .resultado {
     width: 800px;
