--- a/buzzquiz.css
+++ b/buzzquiz.css
@@ -19,7 +19,7 @@ header {
     justify-content: center;
     align-items: center;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     top: 0;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -78,29 +78,49 @@ main>section {
     background: #FAFAFA;
     border: 1px dashed #EC362D;
     border-radius: 50px;
+    width: 150px;
+    height: 40px;
 }
 
-main>section>span {
+main>section>div>span {
     font-size: 20px;
     font-weight: 700;
 }
 
-main>section>div {
+section > div:first-of-type{
     display: flex;
+    justify-content: space-between;
+}
+section > div > ion-icon{
+    color: #EC362D;
+    font-size: 30px;
+}
 
+.container-cards {
+    display: flex;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
 .cards {
-    background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 65%, #000000 100%), url(img/1295304.jpg);
-    background-size: contain;
     width: 340px;
     height: 180px;
     margin: 15px 5px 0 5px;
     border-radius: 5px;
     position: relative;
 }
-
+.cards::after{
+    content:'';
+    position:absolute;
+    left:0; top:0;
+    width:100%; height:100%;
+    display:inline-block;
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,.5) 65%, #000000 100%);
+}
+.cards>img{
+    height: 100%;
+    width: 100%;
+}
 .cards>span {
     color: white;
     font-size: 19px;
@@ -110,6 +130,7 @@ main>section>div {
     bottom: 8px;
     left: 20px;
     margin: auto;
+    z-index: 1;
 }
 
 
