--- a/buzzquiz.css
+++ b/buzzquiz.css
@@ -37,8 +37,8 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 70px 0 0 0;
-    height: 100%;
+    margin: 70px 0 0 0;
+    height: calc(100% - 70px);
     overflow-y: scroll;
 }
 
@@ -90,10 +90,12 @@ main>section>div>span {
 section > div:first-of-type{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 section > div > ion-icon{
     color: #EC362D;
-    font-size: 30px;
+    height: 30px;
+    width: 30px;
 }
 
 .container-cards {
@@ -101,12 +103,17 @@ section > div > ion-icon{
     justify-content: center;
     flex-wrap: wrap;
 }
-
-.cards {
+.container-cards>div{
+    position: relative;
     width: 340px;
     height: 180px;
     margin: 15px 5px 0 5px;
     border-radius: 5px;
+}
+
+.cards {
+    width: 100%;
+    height: 100%;
     position: relative;
 }
 .cards::after{
@@ -120,6 +127,7 @@ section > div > ion-icon{
 .cards>img{
     height: 100%;
     width: 100%;
+    border-radius: 5px;
 }
 .cards>span {
     color: white;
@@ -133,6 +141,26 @@ section > div > ion-icon{
     z-index: 1;
 }
 
+.menu-cards{
+    position: absolute;
+    top: 20px;
+    right: 0;
+    background-color: #EC362D;
+    border-radius: 10px 0 0 10px;
+    display: flex;
+    height: 80px;
+    width: 40px;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 5px 5px;
+    z-index: 1;
+}
+
+.menu-cards>ion-icon{
+    color: white;
+    font-size: 30px;
+}
 
 
 /* inicio tela 3 */
