--- a/buzzquiz.css
+++ b/buzzquiz.css
@@ -6,6 +6,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #FAFAFA;
+    position: relative;
 }
 
 header {
@@ -19,7 +20,7 @@ header {
     justify-content: center;
     align-items: center;
     position: fixed;
-    z-index: 2;
+    z-index: 4;
     top: 0;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -160,6 +161,24 @@ section > div > ion-icon{
 .menu-cards>ion-icon{
     color: white;
     font-size: 30px;
+}
+
+.loading{
+    height: 100%;
+    width: 100%;
+    z-index: 3;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFFFFF;
+}
+.loading>img{
+    width: 10vh;
+    height: 10vh;
+
 }
 
 
