--- a/buzzquiz.css
+++ b/buzzquiz.css
@@ -88,12 +88,13 @@ main>section>div>span {
     font-weight: 700;
 }
 
-section > div:first-of-type{
+section>div:first-of-type {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-section > div > ion-icon{
+
+section>div>ion-icon {
     color: #EC362D;
     height: 30px;
     width: 30px;
@@ -104,7 +105,8 @@ section > div > ion-icon{
     justify-content: center;
     flex-wrap: wrap;
 }
-.container-cards>div{
+
+.container-cards>div {
     position: relative;
     width: 340px;
     height: 180px;
@@ -117,19 +119,24 @@ section > div > ion-icon{
     height: 100%;
     position: relative;
 }
-.cards::after{
-    content:'';
-    position:absolute;
-    left:0; top:0;
-    width:100%; height:100%;
-    display:inline-block;
-    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,.5) 65%, #000000 100%);
+
+.cards::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .5) 65%, #000000 100%);
 }
-.cards>img{
+
+.cards>img {
     height: 100%;
     width: 100%;
     border-radius: 5px;
 }
+
 .cards>span {
     color: white;
     font-size: 19px;
@@ -142,7 +149,7 @@ section > div > ion-icon{
     z-index: 1;
 }
 
-.menu-cards{
+.menu-cards {
     position: absolute;
     top: 20px;
     right: 0;
@@ -158,12 +165,12 @@ section > div > ion-icon{
     z-index: 1;
 }
 
-.menu-cards>ion-icon{
+.menu-cards>ion-icon {
     color: white;
     font-size: 30px;
 }
 
-.loading{
+.loading {
     height: 100%;
     width: 100%;
     z-index: 3;
@@ -175,7 +182,8 @@ section > div > ion-icon{
     align-items: center;
     background-color: #FFFFFF;
 }
-.loading>img{
+
+.loading>img {
     width: 10vh;
     height: 10vh;
 
@@ -381,12 +389,14 @@ ion-icon {
     height: 227px;
     position: relative;
 }
-.banner img{
+
+.banner img {
     width: 100%;
     height: 100%;
     filter: brightness(60%);
     object-fit: cover;
 }
+
 .titulo-quiz {
     margin-top: 100px;
     font-weight: 400;
@@ -395,6 +405,7 @@ ion-icon {
     position: absolute;
     top: 0;
 }
+
 .pergunta,
 .resultado {
     width: 800px;
@@ -527,7 +538,7 @@ button:hover {
     display: none;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 1100px) {
 
     .criação-niveis,
     .criação-niveis>div,
@@ -538,7 +549,7 @@ button:hover {
     .criação-perguntas,
     .criação-perguntas>div,
     .criação-perguntas>:nth-child(2) {
-        width: 100%;
+        width: 375px;
     }
 
     .criação-niveis input,
