--- a/buzzquiz.css
+++ b/buzzquiz.css
@@ -25,6 +25,12 @@ header {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+header>span{
+    font-size: 37px;
+    font-weight: 700;
+    color: #FFFFFF;
+}
+
 .container {
     width: 100%;
     height: 100vh;
@@ -388,6 +394,7 @@ ion-icon {
     width: 100%;
     height: 227px;
     position: relative;
+    margin-bottom: 5px;
 }
 
 .banner img {
@@ -409,11 +416,11 @@ ion-icon {
 .pergunta,
 .resultado {
     width: 800px;
-    height: 676px;
+    height: fit-content;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 42px;
+    margin: 20px 0;
 }
 
 .caixa-de-pergunta,
@@ -437,12 +444,14 @@ ion-icon {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    height: fit-content;
 }
 
 .resposta,
 .meu-resultado {
     width: 40%;
     margin: 20px;
+    height: fit-content;
 }
 
 .resposta:hover {
@@ -452,6 +461,7 @@ ion-icon {
 img {
     width: 100%;
     margin-bottom: 7px;
+    height: 100%;
 }
 
 .nao-marcada {
